--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.5",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
