--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
     "react-scripts": "4.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
